<resources>
    <string name="shr_app_name">Gymity</string>
    <string name="shr_hint_username">Username</string>
    <string name="shr_hint_full_name">Full name</string>
    <string name="shr_hint_password">Password</string>
    <string name="shr_hint_confirm_password">Confirm password</string>
    <string name="shr_button_next">Next</string>
    <string name="shr_button_login">Login</string>
    <string name="shr_button_register">Register</string>
    <string name="shr_error_password">Password is incorrect.</string>
    <string name="shr_filter_title">Filter</string>
    <string name="shr_search_title">Search</string>
    <string name="shr_product_title">Title</string>
    <string name="shr_product_description">Secondary text</string>
    <string name="shr_incorrect_credentials">Incorrect credentials</string>
    <string name="shr_register">Register</string>
    <string name="shr_subscribe">Subscribe</string>
    <string name="shr_unsubscribe">Unsubscribe</string>

    <!-- Shrine backdrop menu labels -->
    <string name="shr_gyms">Gyms</string>
    <string name="shr_offers">Offers</string>
    <string name="shr_notifications">Notifications</string>
    <string name="shr_my_account">My account</string>
    <string name="shr_logout">Logout</string>

    <!-- Firebase -->
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="fcm_message">FCM Message</string>
    <string name="send">Send</string>
    <string name="comment">Comment…</string>
    <string name="my_offers">My offers</string>
    <string name="my_gyms">My gyms</string>
</resources>
